--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "6.3.0",
     "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
+    "csurf": "1.11.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
